# SHEF_processing

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  shefParser  shefParser.py  shefToTimeSeries  shef_parameters.txt  shef_sensors.csv  test.SHEFPARM  test.shef  timezones.shef
.github/workflows/: pypi-deploy.yml  test-deploy.yml
docs/: index.html  search.js  shef.html
docs/shef/: exporters.html  loaders.html  shef_parser.html
example-shef-files/lrl/: COERR1LRN.2024.07.03.121714  MEMRR7MRX_PROD.shef_202407031212.2024.07.03.121259  cwbi_lpms.shef.2024.06.25.080120  lmrfc_qpf_00hr.coe.2024.07.03.040218  lpms2cwms_lrd.shef_LRD106.202407031150.2024.07.03.115014  ohrfc_LRL_0hrQPF_Locals_2024070212.2024.07.02.124124  (+3 more)
examples/: cda_export_example.py
rtd_docs/: command-line.rst  conf.py  description.rst  dss_sensors+parameters.rst  exporter-requirements.rst  exporters.rst  helper-script.rst  index.rst  loader-requirements.rst  loaders.rst  overview.rst  shefdss_util.rst  shefit.rst  using-cda-exporter.rst  using-cda-loader.rst  using-dss-exporter.rst  using-dss-loader.rst
shef/: __init__.py  constants.py  import_validator.py  shef_parser.py
shef_loader/: Readme.md  __init__.py  base_loader.py  cda_loader.py  dssvue_loader.py  dummy_loader.py  shared.py  shefdss_util.py
testing/: cwms.shef  cwms_parameters.csv  cwms_sensors.csv  mesonet_sensors.csv  nws_test.shef  nws_test_sensors.csv  nws_test_sensors.txt  shef_parameters.csv
tests/: test_cli_export_cda.py  test_cli_export_cda_errors.py  test_cli_parse_and_errors.py  test_cli_run.py
(+30 files in other folders)
