[tool.poetry]
name = "shef-parser"
repository = "https://github.com/HydrologicEngineeringCenter/SHEF_processing"

version = "1.8.0"


packages = [
    { include = "shef" },
]
description = "Module to extract data from SHEF formated files with ability to save output as flat file, HEC-DSS file, or directly into Corps water management systems (CWMS) database"
readme = "README.md"
license = "LICENSE"
keywords = ["SHEF","USACE", "CWMS", "DSS"]
authors = ["Hydrologic Engineering Center"]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = { version = "^7.0", optional = true }
sphinx_rtd_theme = { version = "^2.0", optional = true }
sphinx-design = { version = "^0.5", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-design"]

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
#pytest = "^8.1.1"
#pytest-cov = "^4.1.0"
#pandas-stubs = "^2.2.1.240316"
yamlfix = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.yamlfix]
comments_min_spaces_from_content = 1
whitelines = 1
explicit_start = false
preserve_quotes = true

[tool.poetry.scripts]
shefParser = "shef.shef_parser:main"

